--- a/scr/cgo3read_main.lfm
+++ b/scr/cgo3read_main.lfm
@@ -1,12 +1,12 @@
 object Form1: TForm1
-  Left = 608
-  Height = 679
-  Top = 196
-  Width = 985
+  Left = 777
+  Height = 759
+  Top = 332
+  Width = 1037
   Caption = 'Form1'
-  ClientHeight = 679
-  ClientWidth = 985
-  Constraints.MinHeight = 600
+  ClientHeight = 759
+  ClientWidth = 1037
+  Constraints.MinHeight = 670
   Constraints.MinWidth = 985
   OnActivate = FormActivate
   OnClose = FormClose
@@ -16,19 +16,19 @@ object Form1: TForm1
   LCLVersion = '3.7.0.0'
   object upperPanel: TPanel
     Left = 0
-    Height = 661
+    Height = 736
     Top = 0
     Width = 144
     Align = alLeft
-    ClientHeight = 661
+    ClientHeight = 736
     ClientWidth = 144
     TabOrder = 0
     object cbPort: TComboBox
       Left = 9
-      Height = 28
+      Height = 25
       Top = 10
       Width = 128
-      ItemHeight = 0
+      ItemHeight = 17
       ItemIndex = 0
       Items.Strings = (
         '/dev/ttyUSB0'
@@ -45,10 +45,10 @@ object Form1: TForm1
     end
     object cbSpeed: TComboBox
       Left = 9
-      Height = 28
+      Height = 25
       Top = 50
       Width = 128
-      ItemHeight = 0
+      ItemHeight = 17
       Items.Strings = (
         '14400'
         '19200'
@@ -93,16 +93,16 @@ object Form1: TForm1
     end
     object cbRecord: TCheckBox
       Left = 16
-      Height = 23
+      Height = 21
       Top = 232
-      Width = 82
+      Width = 74
       Caption = 'cbRecord'
       TabOrder = 5
     end
     object Image1: TImage
       Left = 9
       Height = 128
-      Top = 533
+      Top = 608
       Width = 128
       Anchors = [akLeft, akBottom]
       Center = True
@@ -634,9 +634,9 @@ object Form1: TForm1
   end
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 18
-    Top = 661
-    Width = 985
+    Height = 23
+    Top = 736
+    Width = 1037
     Panels = <    
       item
         Width = 100
@@ -651,132 +651,37 @@ object Form1: TForm1
   end
   object pcMain: TPageControl
     Left = 144
-    Height = 661
+    Height = 736
     Top = 0
-    Width = 841
-    ActivePage = tsFC
+    Width = 893
+    ActivePage = tsYGC
     Align = alClient
     Images = ImageList1
     ParentFont = False
-    TabIndex = 1
+    TabIndex = 0
     TabOrder = 2
     OnChange = pcMainChange
     object tsYGC: TTabSheet
       Caption = 'YGC'
-      ClientHeight = 631
-      ClientWidth = 831
+      ClientHeight = 706
+      ClientWidth = 885
       ImageIndex = 1
       PopupMenu = mnText
-      object panelRight: TPanel
-        Left = 705
-        Height = 348
-        Top = 132
-        Width = 126
-        BevelColor = clRed
-        BevelWidth = 2
-        ClientHeight = 348
-        ClientWidth = 126
-        ParentBackground = False
-        ParentColor = False
-        TabOrder = 0
-        object btnFrontErs: TButton
-          Left = 8
-          Height = 25
-          Top = 112
-          Width = 107
-          Caption = 'FrontErase'
-          TabOrder = 0
-          OnClick = btnFrontErsClick
-        end
-        object btnPreFrontCali: TButton
-          Left = 8
-          Height = 25
-          Top = 200
-          Width = 107
-          Caption = 'PreFrontCali'
-          ParentBidiMode = False
-          TabOrder = 1
-          OnClick = btnPreFrontCaliClick
-        end
-        object btnYawEncCali: TButton
-          Left = 8
-          Height = 25
-          Top = 168
-          Width = 107
-          Caption = 'YawEncCali'
-          TabOrder = 2
-          OnClick = btnYawEncCaliClick
-        end
-        object btnYawEncErs: TButton
-          Left = 8
-          Height = 25
-          Top = 16
-          Width = 107
-          Caption = 'YawEncErase'
-          TabOrder = 3
-          OnClick = btnYawEncErsClick
-        end
-        object btnZeroPhaseErs: TButton
-          Left = 8
-          Height = 25
-          Top = 48
-          Width = 107
-          Caption = 'ZeroPhaseErs'
-          TabOrder = 4
-          OnClick = btnZeroPhaseErsClick
-        end
-        object btnAccErase: TButton
-          Left = 8
-          Height = 25
-          Top = 80
-          Width = 107
-          Caption = 'AccErase'
-          TabOrder = 5
-          OnClick = btnAccEraseClick
-        end
-        object btnZeroPhaseCali: TButton
-          Left = 8
-          Height = 25
-          Top = 232
-          Width = 107
-          Caption = 'ZeroPhaseCali'
-          ParentBidiMode = False
-          TabOrder = 6
-          OnClick = btnZeroPhaseCaliClick
-        end
-        object lblPowerCycle: TLabel
-          Left = 8
-          Height = 16
-          Top = 271
-          Width = 97
-          Caption = 'Power cycle cam'
-        end
-        object btnAccCali: TButton
-          Left = 8
-          Height = 25
-          Top = 304
-          Width = 107
-          Caption = 'AccCali'
-          ParentBidiMode = False
-          TabOrder = 7
-          OnClick = btnAccCaliClick
-        end
-      end
       object panelYGCTop: TPanel
         Left = 0
-        Height = 132
+        Height = 178
         Top = 0
-        Width = 831
-        Align = alTop
-        ClientHeight = 132
-        ClientWidth = 831
-        TabOrder = 1
+        Width = 885
+        Align = alClient
+        ClientHeight = 178
+        ClientWidth = 885
+        TabOrder = 0
         object GIMBALtext: TMemo
           Left = 392
-          Height = 130
+          Height = 177
           Top = 1
-          Width = 450
-          Anchors = [akTop, akLeft, akRight]
+          Width = 504
+          Anchors = [akTop, akLeft, akRight, akBottom]
           Font.Height = -16
           Font.Name = 'Courier New'
           Lines.Strings = (
@@ -790,48 +695,286 @@ object Form1: TForm1
         end
         object lblBootTime: TLabel
           Left = 8
-          Height = 16
+          Height = 17
           Top = 40
-          Width = 78
+          Width = 77
           Caption = 'Boot time [s]:'
         end
         object lblGimbalBootTime: TLabel
           Left = 128
-          Height = 16
+          Height = 17
           Top = 40
-          Width = 71
+          Width = 68
           Caption = 'Time stamp'
         end
         object lblSerialNo: TLabel
           Left = 8
-          Height = 16
+          Height = 17
           Top = 64
           Width = 32
           Caption = 'Serial'
         end
         object lblSerial: TLabel
           Left = 128
-          Height = 16
+          Height = 17
           Top = 64
           Width = 95
           Caption = 'Gimbal serial no'
         end
         object lblWarning: TLabel
           Left = 8
-          Height = 19
+          Height = 21
           Top = 8
-          Width = 37
+          Width = 38
           Caption = 'warn'
           Font.Color = clRed
           Font.Height = -16
           Font.Style = [fsBold]
           ParentFont = False
         end
+      end
+      object panelYGCBottom: TPanel
+        Left = 0
+        Height = 528
+        Top = 178
+        Width = 885
+        Align = alBottom
+        Anchors = [akLeft]
+        ClientHeight = 528
+        ClientWidth = 885
+        ParentBackground = False
+        ParentColor = False
+        TabOrder = 1
+        object panelTempCali: TPanel
+          Left = 704
+          Height = 127
+          Top = 376
+          Width = 126
+          BevelColor = clRed
+          BevelWidth = 2
+          ClientHeight = 127
+          ClientWidth = 126
+          ParentBackground = False
+          ParentColor = False
+          TabOrder = 0
+          Visible = False
+          object btnTempErs: TButton
+            Left = 8
+            Height = 25
+            Top = 48
+            Width = 107
+            Caption = 'ImuTempErs'
+            TabOrder = 0
+            OnClick = btnTempErsClick
+          end
+          object btnTempCali: TButton
+            Left = 8
+            Height = 25
+            Top = 88
+            Width = 107
+            Caption = 'ImuTempCali'
+            TabOrder = 1
+            OnClick = btnTempCaliClick
+          end
+          object lblTempCali: TLabel
+            Left = 8
+            Height = 21
+            Top = 16
+            Width = 96
+            Caption = 'IMU temp cali'
+            Font.Color = clRed
+            Font.Height = -16
+            ParentFont = False
+          end
+        end
+        object panelRight: TPanel
+          Left = 704
+          Height = 348
+          Top = 16
+          Width = 126
+          BevelColor = clRed
+          BevelWidth = 2
+          ClientHeight = 348
+          ClientWidth = 126
+          ParentBackground = False
+          ParentColor = False
+          TabOrder = 1
+          object btnFrontErs: TButton
+            Left = 8
+            Height = 25
+            Top = 112
+            Width = 107
+            Caption = 'FrontErase'
+            TabOrder = 0
+            OnClick = btnFrontErsClick
+          end
+          object btnPreFrontCali: TButton
+            Left = 8
+            Height = 25
+            Top = 200
+            Width = 107
+            Caption = 'PreFrontCali'
+            ParentBidiMode = False
+            TabOrder = 1
+            OnClick = btnPreFrontCaliClick
+          end
+          object btnYawEncCali: TButton
+            Left = 8
+            Height = 25
+            Top = 168
+            Width = 107
+            Caption = 'YawEncCali'
+            TabOrder = 2
+            OnClick = btnYawEncCaliClick
+          end
+          object btnYawEncErs: TButton
+            Left = 8
+            Height = 25
+            Top = 16
+            Width = 107
+            Caption = 'YawEncErase'
+            TabOrder = 3
+            OnClick = btnYawEncErsClick
+          end
+          object btnZeroPhaseErs: TButton
+            Left = 8
+            Height = 25
+            Top = 48
+            Width = 107
+            Caption = 'ZeroPhaseErs'
+            TabOrder = 4
+            OnClick = btnZeroPhaseErsClick
+          end
+          object btnAccErase: TButton
+            Left = 8
+            Height = 25
+            Top = 80
+            Width = 107
+            Caption = 'AccErase'
+            TabOrder = 5
+            OnClick = btnAccEraseClick
+          end
+          object btnZeroPhaseCali: TButton
+            Left = 8
+            Height = 25
+            Top = 232
+            Width = 107
+            Caption = 'ZeroPhaseCali'
+            ParentBidiMode = False
+            TabOrder = 6
+            OnClick = btnZeroPhaseCaliClick
+          end
+          object lblPowerCycle: TLabel
+            Left = 8
+            Height = 17
+            Top = 271
+            Width = 96
+            Caption = 'Power cycle cam'
+          end
+          object btnAccCali: TButton
+            Left = 8
+            Height = 25
+            Top = 304
+            Width = 107
+            Caption = 'AccCali'
+            ParentBidiMode = False
+            TabOrder = 7
+            OnClick = btnAccCaliClick
+          end
+        end
+        object gridStatus: TStringGrid
+          Left = 8
+          Height = 424
+          Top = 8
+          Width = 280
+          ColCount = 2
+          TabOrder = 2
+          ColWidths = (
+            178
+            92
+          )
+        end
+        object gridVarious: TStringGrid
+          Left = 288
+          Height = 424
+          Top = 8
+          Width = 272
+          ColCount = 2
+          TabOrder = 3
+          ColWidths = (
+            172
+            92
+          )
+        end
+        object rgYGC_Type: TRadioGroup
+          Left = 568
+          Height = 168
+          Top = 8
+          Width = 128
+          AutoFill = True
+          Caption = 'Show 2nd message'
+          ChildSizing.LeftRightSpacing = 6
+          ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+          ChildSizing.EnlargeVertical = crsHomogenousChildResize
+          ChildSizing.ShrinkHorizontal = crsScaleChilds
+          ChildSizing.ShrinkVertical = crsScaleChilds
+          ChildSizing.Layout = cclLeftToRightThenTopToBottom
+          ChildSizing.ControlsPerLine = 1
+          ClientHeight = 146
+          ClientWidth = 124
+          ItemIndex = 0
+          Items.Strings = (
+            'GYRO_POWER'
+            'EULER_ANGLE'
+            'ACC'
+            'TEMP_DIFF'
+            'Channel_data'
+          )
+          OnClick = rgYGC_TypeClick
+          ParentBackground = False
+          TabOrder = 4
+        end
+        object btnVersion: TButton
+          Left = 584
+          Height = 25
+          Top = 184
+          Width = 99
+          Caption = 'versions'
+          TabOrder = 5
+          OnClick = btnVersionClick
+        end
+        object btnReboot: TButton
+          Left = 584
+          Height = 25
+          Top = 216
+          Width = 99
+          Caption = 'btnReboot'
+          TabOrder = 6
+          OnClick = btnRebootClick
+        end
+        object btnMotorTest: TButton
+          Left = 584
+          Height = 25
+          Top = 288
+          Width = 99
+          Caption = 'Motor Test'
+          TabOrder = 7
+          OnClick = btnMotorTestClick
+        end
+        object btnVibrationTest: TButton
+          Left = 584
+          Height = 25
+          Top = 320
+          Width = 99
+          Caption = 'Vibration Test'
+          TabOrder = 8
+          OnClick = btnVibrationTestClick
+        end
         object lblCameraType: TLabel
-          Left = 128
-          Height = 28
-          Top = 96
-          Width = 79
+          Left = 116
+          Height = 32
+          Top = 464
+          Width = 80
           Caption = 'CGO3+'
           Font.Color = clNavy
           Font.Height = -24
@@ -839,124 +982,11 @@ object Form1: TForm1
           ParentFont = False
         end
       end
-      object gridStatus: TStringGrid
-        Left = 8
-        Height = 484
-        Top = 144
-        Width = 280
-        Anchors = [akTop, akLeft, akBottom]
-        ColCount = 2
-        TabOrder = 2
-        ColWidths = (
-          178
-          92
-        )
-      end
-      object gridVarious: TStringGrid
-        Left = 296
-        Height = 484
-        Top = 144
-        Width = 272
-        Anchors = [akTop, akLeft, akBottom]
-        ColCount = 2
-        TabOrder = 3
-        ColWidths = (
-          172
-          92
-        )
-      end
-      object rgYGC_Type: TRadioGroup
-        Left = 568
-        Height = 168
-        Top = 144
-        Width = 128
-        AutoFill = True
-        Caption = 'Show 2nd message'
-        ChildSizing.LeftRightSpacing = 6
-        ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-        ChildSizing.EnlargeVertical = crsHomogenousChildResize
-        ChildSizing.ShrinkHorizontal = crsScaleChilds
-        ChildSizing.ShrinkVertical = crsScaleChilds
-        ChildSizing.Layout = cclLeftToRightThenTopToBottom
-        ChildSizing.ControlsPerLine = 1
-        ClientHeight = 151
-        ClientWidth = 126
-        ItemIndex = 0
-        Items.Strings = (
-          'GYRO_POWER'
-          'EULER_ANGLE'
-          'ACC'
-          'TEMP_DIFF'
-          'Channel_data'
-        )
-        OnClick = rgYGC_TypeClick
-        TabOrder = 4
-      end
-      object btnVersion: TButton
-        Left = 584
-        Height = 25
-        Top = 320
-        Width = 99
-        Caption = 'versions'
-        TabOrder = 5
-        OnClick = btnVersionClick
-      end
-      object btnReboot: TButton
-        Left = 584
-        Height = 25
-        Top = 360
-        Width = 99
-        Caption = 'btnReboot'
-        TabOrder = 6
-        OnClick = btnRebootClick
-      end
-      object panelTempCali: TPanel
-        Left = 705
-        Height = 127
-        Top = 488
-        Width = 126
-        BevelColor = clRed
-        BevelWidth = 2
-        ClientHeight = 127
-        ClientWidth = 126
-        ParentBackground = False
-        ParentColor = False
-        TabOrder = 7
-        Visible = False
-        object btnTempErs: TButton
-          Left = 8
-          Height = 25
-          Top = 48
-          Width = 107
-          Caption = 'ImuTempErs'
-          TabOrder = 0
-          OnClick = btnTempErsClick
-        end
-        object btnTempCali: TButton
-          Left = 8
-          Height = 25
-          Top = 88
-          Width = 107
-          Caption = 'ImuTempCali'
-          TabOrder = 1
-          OnClick = btnTempCaliClick
-        end
-        object lblTempCali: TLabel
-          Left = 8
-          Height = 19
-          Top = 16
-          Width = 98
-          Caption = 'IMU temp cali'
-          Font.Color = clRed
-          Font.Height = -16
-          ParentFont = False
-        end
-      end
     end
     object tsFC: TTabSheet
       Caption = 'FC'
-      ClientHeight = 631
-      ClientWidth = 831
+      ClientHeight = 706
+      ClientWidth = 885
       ImageIndex = 5
       object knPanControl: TmKnob
         Left = 208
@@ -982,8 +1012,8 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 104
-        ClientWidth = 46
+        ClientHeight = 99
+        ClientWidth = 44
         ItemIndex = 0
         Items.Strings = (
           'F'
@@ -1006,8 +1036,8 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 104
-        ClientWidth = 46
+        ClientHeight = 99
+        ClientWidth = 44
         ItemIndex = 0
         Items.Strings = (
           'A'
@@ -1029,9 +1059,9 @@ object Form1: TForm1
       end
       object lblPanControl: TLabel
         Left = 224
-        Height = 16
+        Height = 17
         Top = 16
-        Width = 32
+        Width = 28
         Caption = '2048'
       end
       object btnCenter: TButton
@@ -1045,9 +1075,9 @@ object Form1: TForm1
       end
       object lblGimbalVersion: TLabel
         Left = 24
-        Height = 16
+        Height = 17
         Top = 198
-        Width = 64
+        Width = 63
         Caption = 'Gimbal FW'
       end
       object btnGimbalCali: TButton
@@ -1252,8 +1282,8 @@ object Form1: TForm1
   end
   object mnText: TPopupMenu
     Images = ImageList1
-    Left = 752
-    Top = 440
+    Left = 648
+    Top = 472
     object mnPorts: TMenuItem
       Action = acScanPorts
     end
